DevOps/Kubernates/pr-5-k8s/ingress/ingress-yaml-files/deployement-puppy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puppy
  namespace: prod
  annotations:
    kubernetes.io/change-cause: "Deploy in puppy"
spec:
  minReadySeconds: 5
  replicas: 5
  selector:
    matchLabels:
      app: puppy-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      name: puppy-pod
      labels:
        app: puppy-app 
    spec:
      containers:
        - name: puppy-container
          image: 984912521466.dkr.ecr.ap-south-1.amazonaws.com/prod/puppy:1.0
          ports:
            - containerPort: 80
          imagePullPolicy: Always
