DevOps/Kubernates/pr-5-k8s/ingress/ingress-yaml-files/service-mochi.yaml
apiVersion: v1
kind: Service
metadata:
  name: mochi-svc-deployment
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: mochi-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
