DevOps/Kubernates/pr-5-k8s/ingress/ingress-yaml-files/service-puppy.yaml
apiVersion: v1
kind: Service
metadata:
  name: puppy-svc-deployment
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: puppy-app
  ports:
      port: 80
