DevOps/Kubernates/pr-5-k8s/ingress/ingress-yaml-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prod-app
  namespace: prod
  annotation:
      alb.ingress.kubernetes.io/scheme: internet-facing
      kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /mochi
            pathType: Prefix
            backend:
              service:
                name: mochi-svc-deployment
                port:
                  number: 80
          - path: /puppy
            pathType: Prefix
            backend:
              service:
                name: puppy-svc-deployment
                port:
                  number: 80
